--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.1.2",
+    "axios": "^0.27.2",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
@@ -39,7 +39,9 @@
     "@storybook/react": "^5.0.10",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
+    "@testing-library/react-hooks": "^8.0.1",
     "babel-loader": "^8.0.5",
+    "react-test-renderer": "^16.14.0",
     "sass": "^1.53.0"
   },
   "jest": {
